--- a/Readme
+++ b/Readme
@@ -13,7 +13,7 @@ Run this:
 	./Setup.linux
 
 Upon successful execution it will ask for changing permission of run.linux.
-Changing permission accordingly and then execute run.linux. The main frame should come up.
+Change permission accordingly and then execute run.linux. The main frame should come up.
 
 A brief writeup on the approach used is available at https://docs.google.com/file/d/0B_i42sRcBimDUjM5Y2lKTDBKaWs/
 
